Ejercicios 2 y 3 Tema 2 terminados

--- a/Módulo 2/Tema 2/Ejercicio_1/index.html
+++ b/Módulo 2/Tema 2/Ejercicio_1/index.html
@@ -39,7 +39,7 @@
             </fieldset>
             <br>
             <label for="inputCountry">País:</label>
-            <input list="countryList" placeholder="Intoduce tu país">
+            <input list="countryList" placeholder="Intoduce tu país" id="country">
             <datalist id="countryList">
                 <option value="España"></option>
                 <option value="Portugal"></option>
