--- a/Módulo 2/Tema 3_CSS3/Chuleta_Pos/index.html
+++ b/Módulo 2/Tema 3_CSS3/Chuleta_Pos/index.html
@@ -71,6 +71,14 @@
         <p>Lorem, ipsum.</p>
     </div>
 
+    <h2>Flexbox</h2>
+    <div class="flex-parent">
+        <div class="flex-child-1">Box 1</div>
+        <div class="flex-child-2">Box 2</div>
+        <div class="flex-child-3">Box 3</div>
+        <!-- <div class="flex-child-4">Box 4</div> -->
+    </div>
+
     <!-- Es para dejar un espacio en blanco por abajo de la ventana --> 
     <div style="height: 1000px;"></div>
 </body>
