--- a/Módulo 2/Tema 3_CSS3/Chuleta_Pos/index.html
+++ b/Módulo 2/Tema 3_CSS3/Chuleta_Pos/index.html
@@ -79,6 +79,35 @@
         <!-- <div class="flex-child-4">Box 4</div> -->
     </div>
 
+    <h2>CSS Grid básico y con media queries</h2>
+    <div class="grid-parent">
+        <div class="grid-child-1"><h2>Box 1</h2></div>
+        <div class="grid-child-2"><h2>Box 2</h2></div>
+        <div class="grid-child-3"><h2>Box 3</h2></div>
+        <div class="grid-child-4"><h2>Box 4</h2></div>
+        <div class="grid-child-5"><h2>Box 5</h2></div>
+        <div class="grid-child-6"><h2>Box 6</h2></div>
+    </div>
+
+    <h2>CSS Grid por lineas del grid</h2>
+    <div class="grid-parent-2">
+        <div class="grid-child-1"><h2>Box 1</h2></div>
+        <div class="grid-child-2"><h2>Box 2</h2></div>
+        <div class="grid-child-3"><h2>Box 3</h2></div>
+        <div class="grid-child-4"><h2>Box 4</h2></div>
+        <div class="grid-child-5"><h2>Box 5</h2></div>
+        <div class="grid-child-6"><h2>Box 6</h2></div>
+    </div>
+
+    <h2>CSS Grid por areas</h2>
+    <div class="grid-parent-3">
+        <div class="grid-child-1"><h2>Box 1</h2></div>
+        <div class="grid-child-2"><h2>Box 2</h2></div>
+        <div class="grid-child-3"><h2>Box 3</h2></div>
+        <div class="grid-child-4"><h2>Box 4</h2></div>
+        <div class="grid-child-5"><h2>Box 5</h2></div>
+        <div class="grid-child-6"><h2>Box 6</h2></div>
+    </div>
     <!-- Es para dejar un espacio en blanco por abajo de la ventana --> 
     <div style="height: 1000px;"></div>
 </body>
