--- a/Módulo 2/Tema 3_CSS3/Chuleta_Pos/index.html
+++ b/Módulo 2/Tema 3_CSS3/Chuleta_Pos/index.html
@@ -106,8 +106,24 @@
         <div class="grid-child-3"><h2>Box 3</h2></div>
         <div class="grid-child-4"><h2>Box 4</h2></div>
         <div class="grid-child-5"><h2>Box 5</h2></div>
-        <div class="grid-child-6"><h2>Box 6</h2></div>
     </div>
+
+    <h2>Degradados o gradientes de color</h2>
+    <div class="gradient-1"></div>
+    <div class="gradient-2"></div>
+    <div class="gradient-3"></div>
+    <div class="gradient-4"></div>
+
+    <h2>Transformaciones</h2>
+    <div class="transformation"></div>
+
+    <h2>Transiciones</h2>
+    <div class="transitions"><span>Click</span></div>
+
+    <h2>Animaciones</h2>
+    <div class="animations"><h3>Texto animado</h3></div>
+
+
     <!-- Es para dejar un espacio en blanco por abajo de la ventana --> 
     <div style="height: 1000px;"></div>
 </body>
