--- a/Módulo 2/Tema 3_CSS3/Chuleta_Pos/index.html
+++ b/Módulo 2/Tema 3_CSS3/Chuleta_Pos/index.html
@@ -122,7 +122,7 @@
 
     <h2>Animaciones</h2>
     <div class="animations"><h3>Texto animado</h3></div>
-
+    <div class="animations-2"><h3>Texto animado</h3></div>
 
     <!-- Es para dejar un espacio en blanco por abajo de la ventana --> 
     <div style="height: 1000px;"></div>
