--- a/Módulo 2/Tema 4_BOOTSTRAP/cheatsheet/index.html
+++ b/Módulo 2/Tema 4_BOOTSTRAP/cheatsheet/index.html
@@ -28,12 +28,141 @@
     <div class="container">
         <h1>Bootstrap Grid de 12 columnas</h1>
         <div class="row">
-            <div class="col-4 border bg-light">col-4</div>
-            <div class="col-4 border bg-light">col-4</div>
-            <div class="col-2 border bg-light">col-2</div>
-            <div class="col-2 border bg-light">col-2</div>
+            <div class="col border bg-light">cols tamaño equitativo</div>
+            <div class="col border bg-light">cols tamaño equitativo</div>
+            <div class="col border bg-light">cols tamaño equitativo</div>
+            <div class="col border bg-light">cols tamaño equitativo</div>
         </div>
+
+        <div class="row">
+            <div class="col-2 border bg-light">col-2</div>
+            <div class="col-5 border bg-light">col-5</div>
+            <div class="col-2 border bg-light">col-2</div>
+            <div class="col-3 border bg-light">col-3</div>
+        </div>
+
+        <div class="row">
+            <div class="col border bg-light">col tamaño equitativo</div>
+            <div class="col border bg-light">col tamaño equitativo</div>
+            <div class="col-2 border bg-light">col-2</div>
+            <div class="col-3 border bg-light">col-3</div>
+        </div>
+
+        <div class="row">
+            <div class="col-1 border bg-light">col-1</div>
+            <div class="col-1 border bg-light">col-1</div>
+            <div class="col-1 border bg-light">col-1</div>
+            <div class="col-1 border bg-light">col-1</div>
+            <div class="col-1 border bg-light">col-1</div>
+            <div class="col-1 border bg-light">col-1</div>
+            <div class="col-1 border bg-light">col-1</div>
+            <div class="col-1 border bg-light">col-1</div>
+            <div class="col-1 border bg-light">col-1</div>
+            <div class="col-1 border bg-light">col-1</div>
+            <div class="col-1 border bg-light">col-1</div>
+            <div class="col-1 border bg-light">col-1</div>
+        </div>
+
+        <div class="row">
+            <div class="col col-xl-5 border bg-light">col-1</div>
+            <div class="col col-xl-3 border bg-light">col-2</div>
+            <div class="col col-xl border bg-light">col-3</div>
+            <div class="col col-md-12 col-xl border bg-light">col-4</div>
+        </div>
+
+        <h3 class="mt-3">Columnas responsive</h3>
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-4 mt-2">
+            <div class="col border bg-light">Columna 1</div>
+            <div class="col border bg-light">Columna 2</div>
+            <div class="col border bg-light">Columna 3</div>
+            <div class="col border bg-light">Columna 4</div>
+        </div>
+
+        <h3 class="mt-3">Alineamiento vertical (flexbox)</h3>
+        <div class="row align-items-start mt-2 border bg-dark sized">
+            <div class="col border bg-light">Columna 1</div>
+            <div class="col border bg-light">Columna 2</div>
+            <div class="col border bg-light">Columna 3</div>
+            <div class="col border bg-light">Columna 4</div>
+        </div>
+
+        <div class="row align-items-center mt-2 border bg-dark sized">
+            <div class="col border bg-light">Columna 1</div>
+            <div class="col border bg-light">Columna 2</div>
+            <div class="col border bg-light">Columna 3</div>
+            <div class="col border bg-light">Columna 4</div>
+        </div>
+
+        <div class="row align-items-end mt-2 border bg-dark sized">
+            <div class="col border bg-light">Columna 1</div>
+            <div class="col border bg-light">Columna 2</div>
+            <div class="col border bg-light">Columna 3</div>
+            <div class="col border bg-light">Columna 4</div>
+        </div>
+
+        <div class="row align-items-start align-items-md-center align-items-xl-end mt-2 border bg-dark sized">
+            <div class="col border bg-light">Columna 1</div>
+            <div class="col border bg-light">Columna 2</div>
+            <div class="col border bg-light">Columna 3</div>
+            <div class="col border bg-light">Columna 4</div>
+        </div>
+
+        <div class="row mt-2 bg-dark sized">
+            <div class="col align-self-start border bg-light">Columna 1</div>
+            <div class="col align-self-center border bg-light">Columna 2</div>
+            <div class="col align-self-end border bg-light">Columna 3</div>
+            <div class="col border bg-light">Columna 4</div>
+        </div>
+
+        <h3 class="mt-3">Alineamiento horizontal (flexbox)</h3>
+        <div class="row justify-content-start mt-2 border bg-dark">
+            <div class="col-2 border bg-light">Columna 1</div>
+            <div class="col-2 border bg-light">Columna 2</div>
+            <div class="col-2 border bg-light">Columna 3</div>
+            <div class="col-2 border bg-light">Columna 4</div>
+        </div>
+
+        <div class="row justify-content-center mt-2 border bg-dark">
+            <div class="col-2 border bg-light">Columna 1</div>
+            <div class="col-2 border bg-light">Columna 2</div>
+            <div class="col-2 border bg-light">Columna 3</div>
+            <div class="col-2 border bg-light">Columna 4</div>
+        </div>
+
+        <div class="row justify-content-end mt-2 border bg-dark">
+            <div class="col-2 border bg-light">Columna 1</div>
+            <div class="col-2 border bg-light">Columna 2</div>
+            <div class="col-2 border bg-light">Columna 3</div>
+            <div class="col-2 border bg-light">Columna 4</div>
+        </div>
+
+        <div class="row justify-content-around mt-2 border bg-dark">
+            <div class="col-2 border bg-light">Columna 1</div>
+            <div class="col-2 border bg-light">Columna 2</div>
+            <div class="col-2 border bg-light">Columna 3</div>
+            <div class="col-2 border bg-light">Columna 4</div>
+        </div>
+
+        <div class="row justify-content-between mt-2 border bg-dark">
+            <div class="col-2 align-self-start border bg-light">Columna 1</div>
+            <div class="col-2 align-self-center border bg-light">Columna 2</div>
+            <div class="col-2 align-self-end border bg-light">Columna 3</div>
+            <div class="col-2 border bg-light">Columna 4</div>
+        </div>
+
+        <h3 class="mt-3">Display none</h3>
+        <div class="row mt-2 border bg-dark">
+            <div class="col border bg-light">Columna 1</div>
+            <div class="col border bg-light">Columna 2</div>
+            <div class="col d-lg-none d-xl-block border bg-light">Columna 3</div>
+            <div class="col border bg-light">Columna 4</div>
+        </div>
+
+
     </div>
+
+    <div style="height: 1000px;"></div>
+
     <!-- Fin contenido -->
 
     <!-- Scripts -->
