--- a/Módulo 2/Tema 4_BOOTSTRAP/sass-example/index.html
+++ b/Módulo 2/Tema 4_BOOTSTRAP/sass-example/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="css/custom.css">
 </head>
 <body>
-    <button class="btn">Prueba</button>
+    <button class="btn btn-primary">Prueba</button>
+    <div class="alert alert-primary"></div>
+    <div class="bg-primary"></div>
+
+    <script></script>
+    <script></script>
+    <script></script>
 </body>
 </html>
