--- a/Módulo 2/Tema 5_Javascript/cheatsheet/index.html
+++ b/Módulo 2/Tema 5_Javascript/cheatsheet/index.html
@@ -17,6 +17,7 @@
     <a href="#" onclick="console.log('Hey, soy un script inline');">Inline script</a>
     <a href="#">Internal script</a>
     <a href="#" id="external">External script</a>
+    <button id="miBoton">Cambiar background</button>
 
     <script>
         function hey() {
