--- a/Módulo 2/Tema 5_Javascript/cheatsheet/index.html
+++ b/Módulo 2/Tema 5_Javascript/cheatsheet/index.html
@@ -15,6 +15,7 @@
             border: 5px solid black;
             box-sizing: border-box;
             display: flex;
+            flex-wrap: wrap;
             justify-content: center;
             gap: 20px;
             flex-grow: 1;
@@ -44,8 +45,10 @@
         </div>
     </div>
 
-
-
+    <h1>Eventos</h1>
+    <button class = "btn" id = "boton1">Click Me</button>
+    <button class = "btn" id = "boton2">Click Me</button>
+    <button class = "btn" id = "boton3">Click Me</button>
     <script>
         function hey() {
             alert("Hey");
