--- a/Módulo 2/Tema 5_Javascript/cheatsheet/index.html
+++ b/Módulo 2/Tema 5_Javascript/cheatsheet/index.html
@@ -49,6 +49,13 @@
     <button class = "btn" id = "boton1">Click Me</button>
     <button class = "btn" id = "boton2">Click Me</button>
     <button class = "btn" id = "boton3">Click Me</button>
+
+    <h2>Coordenadas:</h2>
+
+    <h2>Input</h2>
+    <input type="text">
+
+
     <script>
         function hey() {
             alert("Hey");
