--- a/Módulo 2/Tema 5_Javascript/ejercicio_1/index.html
+++ b/Módulo 2/Tema 5_Javascript/ejercicio_1/index.html
@@ -1,29 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        img {
+            width: 400px;
+        }
+    </style>
     <title>Ejercicio 1</title>
 </head>
+
 <body>
+    <h1>Ejercicio 1</h1>
     <!--Punto 1 -->
+    <h2>Punto 1</h2>
     <div class="mainDiv" id="mainDiv"></div>
     <hr>
 
     <!-- Punto 2 -->
+    <h2>Punto 2</h2>
     <button class="btnChgColor" id="btnChgColor"></button>
     <hr>
 
     <!-- Punto 3 -->
-    <ul id = lista>
-        <li><a id = "Link1" href="#">Imagen 1</a></li>
-        <li><a id = "Link2" href="#">Imagen 2</a></li>
-        <li><a id = "Link3" href="#">Imagen 3</a></li>
+    <h2>Punto 3</h2>
+    <ul id=lista>
+        <li><a id="Link1" href="#">https://cdn.pixabay.com/photo/2022/03/06/05/30/clouds-7050884_960_720.jpg</a></li>
+        <li><a id="Link2"
+                href="#">https://img.freepik.com/foto-gratis/fatiga-sobrecargada-padre-soltero-barba-pelirroja-llora-desesperadamente-divierte-dos-ninas-usa-pinturas-colores-tiene-expresiones-felices-sobre-pared-purpura-concepto-feliz-dia-padre_273609-26130.jpg?w=740&t=st=1647434190~exp=1647434790~hmac=72338a71c06a34a3671ab1f7eb13978815c2c3d869891608d0de2a9a133452bf/</a>
+        </li>
+        <li><a id="Link3"
+                href="#">https://img.freepik.com/foto-gratis/mesa-madera-vacia-pancarta-interior-restaurante-ventana-cristal-borrosa-burlan-fondo-abstracto-pueden-utilizar-exhibir-o-montar-sus-productos_7191-1132.jpg?w=740</a>
+        </li>
         <img src="" id="miImg" alt="Aquí va la imagen">
     </ul>
     <hr>
 
+    <!-- Punto 4 -->
+    <h2>Punto 4</h2>
+    <div class="divPunto4" id="divPunto4">
+        <input type="text" class="input4" id="input4">
+        <button class="btnTxt" id="btnTxt">Escribe texto</button>
+    </div>
+    <hr>
+
+    <!-- Punto 4.2 -->
+    <h2>Punto 4.2</h2>
+    <div class="divPunto42" id="divPunto42">
+        <input type="text" class="input42" id="input42">
+        <p class="parrafo42" id="parrafo42"></p>
+    </div>
+    <hr>
+
+    <!-- Punto 5 -->
+    <h2>Punto 5</h2>
+    <div class="divPunto5" id="divPunto5">
+        <textarea name="textArea5" id="textArea5" cols="30" rows="10"></textarea>
+        <button class="btn5" id="btn5">Contar carácteres</button>
+        <p class="parrafo5" id="parrafo5"></p>
+    </div>
+    <hr>
+
+    <!-- Punto 6 -->
+    <h2>Punto 6</h2>
+    <div class="divPunto6" id="divPunto6">
+        <label for="input6">Escribir un número par</label>
+        <input type="text" class="input6" id="input6">
+        <button class="btn6" id="btn6">Validar</button>
+    </div>
+    <hr>
+
+    <!-- Punto 7 -->
+    <h2>Punto 7</h2>
+    <div class="divPunto7" id="divPunto7">
+        <ul class="lista7" id="lista7"></ul>
+    </div>
+    <!-- Punto 7 otra opción-->
+    <h2>Punto 7 otra opción</h2>
+    <div class="divPunto72" id="diPunto72">
+        <ul class="lista72" id="lista72"></ul>
+    </div>
+    <hr>
     <script src="main.js"></script>
 </body>
+
 </html>
