--- a/Módulo 2/Tema 5_Javascript/ejercicio_1/index.html
+++ b/Módulo 2/Tema 5_Javascript/ejercicio_1/index.html
@@ -9,6 +9,10 @@
         img {
             width: 400px;
         }
+        .btn {
+            background-image: -webkit-linear-gradient(top, #eb94d0, #2079b0);
+            background-image: -moz-linear-gradient(top, #eb94d0, #2079b0);
+        }
     </style>
     <title>Ejercicio 1</title>
 </head>
@@ -78,12 +82,59 @@
     <div class="divPunto7" id="divPunto7">
         <ul class="lista7" id="lista7"></ul>
     </div>
+
     <!-- Punto 7 otra opción-->
     <h2>Punto 7 otra opción</h2>
     <div class="divPunto72" id="diPunto72">
         <ul class="lista72" id="lista72"></ul>
     </div>
     <hr>
+
+    <!-- Punto 8 -->
+    <h2>Punto 8</h2>
+    <div class="divPunto8" id="divPunto8">
+        <a href="http://www.google.com" class="enlace8" id="enlace8">Google</a>
+        <button class="boton8" id="boton8">Pulsa</button>
+    </div>
+
+    <!-- Punto 9 -->
+    <h2>Punto 9</h2>
+    <div class="divPunto9" id="divPunto9">
+        <p class="parrafo9" id="parrafo9">Párrafo del ejercicio 9</p>
+        <select name="select9" id="selector9" class="selector9">
+            <option value="negro">Negro</option>
+            <option value="blanco">Blanco</option>
+            <option value="rojo">Rojo</option>
+            <option value="amarillo">Amarillo</option>
+            <option value="verde">Verde</option>
+            <option value="azul">Azul</option>
+        </select>
+    </div>
+
+    <!-- Punto 10 -->
+    <h2>Punto 10</h2>
+    <div class="divPunto10" id="divPunto10">
+        <p>Aleatorio: <span id="numRandom"></span></p>
+        <p>Total de números: <span id="numTotal"></span></p>
+        <p>Impares: <span id="numImpares"></span></p>
+        <p>Pares: <span id="numPares"></span></p>
+        <button class="btn10" id="btn10">Generar aleatorio</button>
+    </div>
+
+    <!-- Punto 11 -->
+    <h2>Punto 11</h2>
+    <div class="divPunto11" id="divPunto11">
+        <ul id="lista11"></ul>
+        <input type="text" placeholder="Introduzca un número">
+        <button class="btn11" id="btn11">Añadir</button>
+    </div>
+
+    <!-- Punto 12 -->
+    <h2>Punto 12</h2>
+    <div class="divPunto12" id="divPunto12">
+        <button class="btn12 btn" id="btn12">Pulsar</button>
+    </div>
+
     <script src="main.js"></script>
 </body>
 
