--- a/Módulo 2/Tema 5_Javascript/ejercicio_1/index.html
+++ b/Módulo 2/Tema 5_Javascript/ejercicio_1/index.html
@@ -102,12 +102,12 @@
     <div class="divPunto9" id="divPunto9">
         <p class="parrafo9" id="parrafo9">Párrafo del ejercicio 9</p>
         <select name="select9" id="selector9" class="selector9">
-            <option value="negro">Negro</option>
-            <option value="blanco">Blanco</option>
-            <option value="rojo">Rojo</option>
-            <option value="amarillo">Amarillo</option>
-            <option value="verde">Verde</option>
-            <option value="azul">Azul</option>
+            <option value="black">Negro</option>
+            <option value="white">Blanco</option>
+            <option value="red">Rojo</option>
+            <option value="yellow">Amarillo</option>
+            <option value="green">Verde</option>
+            <option value="blue">Azul</option>
         </select>
     </div>
 
