--- a/Módulo 2/Tema 5_Javascript/ejercicio_1/index.html
+++ b/Módulo 2/Tema 5_Javascript/ejercicio_1/index.html
@@ -135,6 +135,14 @@
         <button class="btn12 btn" id="btn12">Pulsar</button>
     </div>
 
+    <!-- Punto Extra -->
+    <h2>Extra: Refactorizar código</h2>
+    <div class="divPunto13" id="divPunto13">
+        <button class="btn13" id="btn13">Botón 1</button>
+        <button class="btn13" id="btn13">Botón 2</button>
+        <button class="btn13" id="btn13">Botón 3</button>
+    </div>
+
     <script src="main.js"></script>
 </body>
 
