--- a/Módulo 2/Tema 5_Javascript/ejercicio_2/index.html
+++ b/Módulo 2/Tema 5_Javascript/ejercicio_2/index.html
@@ -17,7 +17,7 @@
         <ul class="list-group my-2" id="userInfo"></ul>
 
         <button class="btn btn-success" id="incrementButton">Incrementar</button>
-        <button class="btn btn-outline-danger" id="incrementButton">Vaciar</button>
+        <button class="btn btn-outline-danger" id="emptyButton">Vaciar</button>
     </div>
 
 
