--- a/Módulo 2/Tema 5_Javascript/cheatsheet/oop_viejo.html
+++ b/Módulo 2/Tema 5_Javascript/cheatsheet/oop_viejo.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Programación Orientada a Objetos</h1>
     
-    <script src="js/oop.js"></script>
+    <script src="js/oop_viejo.js"></script>
 </body>
 </html>
