--- a/Módulo 2/Tema 5_Javascript/ejercicio_6/index.html
+++ b/Módulo 2/Tema 5_Javascript/ejercicio_6/index.html
@@ -8,9 +8,17 @@
 
     <title>Ejercicio 6</title>
 </head>
+
 <body>
-    <ul class="list-group" id="listComments"></ul>
+    <div class="container">
+        <ul class="list-group" id="listComments"></ul>
+    </div>
+    <div class="container">
+        <span></span>
+    </div>
+    
 
     <script src="js/main.js"></script>
 </body>
+
 </html>
